--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -20,7 +20,7 @@
           <p class="product_description" data-equalizer-watch>A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended dosage to your coffee, smoothie or drop directly underneath the tongue in the morning or day.</p>
           <div class="product_meta">
             <span class="product_price">$29.99</span>
-            <a href="#" class="button">Purchase <i class="arrow"></i></a>
+            <a href="#" data-toggle="reveal-product" class="button">Purchase <i class="arrow"></i></a>
           </div>
         </div>
       </div>
@@ -33,7 +33,7 @@
           <p class="product_description" data-equalizer-watch></p>A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended.</p>
           <div class="product_meta">
             <span class="product_price">$29.99</span>
-            <a href="#" class="button">Purchase <i class="arrow"></i></a>
+            <a href="#" data-toggle="reveal-product" class="button">Purchase <i class="arrow"></i></a>
           </div>
         </div>
       </div>
@@ -51,6 +51,31 @@
           <img class="info_card-header" src="/assets/img/harvey_headline.svg" />
           <p class="info_card-description">Yes! Harvey is a REAL person!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="full reveal product_reveal" id="reveal-product" data-reveal data-animation-in="slide-in-up" data-animation-out="slide-out-down">
+    <button class="close-button" data-close aria-label="Close reveal" type="button">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <div class="grid-container">
+      <div class="grid-x">
+        <div class="cell medium-8 medium-offset-2 large-6 large-offset-3 content">
+          <h2 class="title">We are almost ready to sell online</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+
+          <div class="contact_info grid-x">
+            <div class="cell medium-6">
+              <img src="/assets/img/icon-phone.svg" class="icon"/>
+              <a href="tel:+9703764689 " target="_blank">970-376-4689 </a>
+            </div>
+            <div class="cell medium-6">
+                <img src="/assets/img/icon-email.svg" class="icon"/>
+                <a href="mailto:harveysallnaturalscontact@gmail.com" target="_blank">harveysallnaturalscontact@gmail.com</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
