--- a/src/assets/scss/partials/_contact.scss
+++ b/src/assets/scss/partials/_contact.scss
@@ -2,6 +2,10 @@ section.contact {
   position: relative;
   z-index: 5;
   background-color: rgba($green, .3);
+  background-image: url('/assets/img/tracks-3.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 
   @include breakpoint(large) {
     margin-top: -30px;
