--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,5 +1,8 @@
 <section id="contact" class="contact">
   <div class="grid-container">
+    <span class="bg-tree"></span>
+    <span class="bg-tree" data-rellax-speed="-.75"></span>
+    
     <div class="grid-x contact_grid">
       <div class="cell medium-10 medium-offset-1 contact_form-container">
         <h2>Talk To Harvey</h2>
