--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -29,7 +29,7 @@
         <img src="/assets/img/salve-product-shot-1.jpg"/>
         <div class="product_item-content">
           <h3>Harvey's CBD Healing Salve</h3>
-          <span class="product_sizing">500mg / 0.5 oz</span>
+          <span class="product_sizing">500mg / 1.0 oz</span>
           <p class="product_description" data-equalizer-watch></p>A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended.</p>
           <div class="product_meta">
             <span class="product_price">$29.99</span>
@@ -63,18 +63,19 @@
     <div class="grid-container">
       <div class="grid-x">
         <div class="cell medium-8 medium-offset-2 large-6 large-offset-3 content">
-          <h2 class="title">We are almost ready to sell online</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+          <h2 class="title">How to Purchase Harvey’s</h2>
+          <p>We’ll be selling Harvey’s products online soon, but until then, here’s how to get your hands on the goods.</p>
 
           <div class="contact_info grid-x">
-            <div class="cell medium-6">
+            <div class="cell medium-7">
+              <img src="/assets/img/icon-email.svg" class="icon"/>
+              <a href="mailto:harveysallnaturalscontact@gmail.com" target="_blank">harveysallnaturalscontact@gmail.com</a>
+            </div>
+            <div class="cell medium-5">
               <img src="/assets/img/icon-phone.svg" class="icon"/>
               <a href="tel:+9703764689 " target="_blank">970-376-4689 </a>
             </div>
-            <div class="cell medium-6">
-                <img src="/assets/img/icon-email.svg" class="icon"/>
-                <a href="mailto:harveysallnaturalscontact@gmail.com" target="_blank">harveysallnaturalscontact@gmail.com</a>
-            </div>
+
           </div>
         </div>
       </div>
