--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -51,6 +51,7 @@
           <img class="info_card-header" src="/assets/img/harvey_headline.svg" />
           <p class="info_card-description">Yes! Harvey is a REAL person!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+          <img class="info_thumb" src="/assets/img/harvey.png" />
         </div>
       </div>
     </div>
