--- a/src/partials/faqs.html
+++ b/src/partials/faqs.html
@@ -7,7 +7,7 @@
       <div class="grid-x">
         <div class="medium-12 large-8 large-offset-2 cell faqs_header">  
           <h2>
-            You shouldn’t need a PhD to find the right CBD product. Let Harvey help!          
+            You shouldn’t need a PhD to find the right CBD product. Let Harvey help!
           </h2>
         </div>
 
@@ -15,72 +15,129 @@
           <ul class="accordion" data-accordion data-allow-all-closed="true">
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">What is CBD and how does it work?</a>
+              <a href="#" class="accordion-title">What is CBD?</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
-                <p>Panel 1. Lorem ipsum dolor</p>
-                <a href="#">Nowhere to Go</a>
+                <p>
+                  CBD is short for cannabidiol. It is one of the 104 beneficial compounds found in the cannabis plant. The hemp plant, in its natural state, contains no CBD. Instead, it contains a full cannabidiol profile of CBDA, CBC, CBG, CBN, etc. CBD is essentially created by degrading these quality cannabidiols through a heat process called decarboxylation.
+                </p>
               </div>
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">I’ve heard CBD can cure everything from hangovers to cancer? What gives?</a>
+              <a href="#" class="accordion-title">How does CBD work?</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
-                <p>Panel 1. Lorem ipsum dolor</p>
-                <a href="#">Nowhere to Go</a>
+                <p>
+                  Along with being a natural anti-inflammatory, possessing natural anti-anxiety qualities, providing natural pain relief and many more extraordinary qualities, CBD has a very similar molecular structure to that found in the human endocannabinoid system - which is made up of endocannabinoids and their receptors. These are found everywhere in the body, from the brain and other organs to glands and immune cells. In a nutshell, by helping the brain better understand issues within our bodies, we can help it do the healing for us. 
+                </p>
               </div>
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">What are terpenes and why do they matter?</a>
+              <a href="#" class="accordion-title">What are terpenes?</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
-                <p>Panel 1. Lorem ipsum dolor</p>
-                <a href="#">Nowhere to Go</a>
+                <p>
+                  Terpenes are basically the essence oils of the plant. Terpenes are extremely complex elements and vary from one hemp strain to another. Terpenes can have healing qualities beyond (or greater than) those of CBD.
+                </p>
               </div>
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">Some CBD products say “Broad Spectrum” others“Full Spectrum” Which one better?</a>
+              <a href="#" class="accordion-title">Where is Harvey's All Naturals grown?
+              </a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
-                <p>Panel 1. Lorem ipsum dolor</p>
-                <a href="#">Nowhere to Go</a>
+                <p>
+                  Boot Ranch Farms is our “mother“ farm for creating the highest quality hemp for our products. It is a small, owner-operated, off-grid farm in Colorado’s San Luis Valley using solar power and artesian water. Since large scale farms can’t grow hemp to our quality standards, Harvey also consults with other small farms to help them grow hemp to the same quality standards that we developed at Boot Ranch. Our belief is that quality hemp starts with healthy living soils. We use beneficial insects and over 20,000 species of beneficial microorganisms for insect control, disease control, and plant health. We grow for terpenes and the high quality CBDs come along for the ride. 
+                </p>
               </div>
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">Hemp Flower Oil or Hemp Seed Oil? Isn’t is all hemp?</a>
+              <a href="#" class="accordion-title">How is Harvey's All Naturals processed</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
-                <p>Panel 1. Lorem ipsum dolor</p>
-                <a href="#">Nowhere to Go</a>
+                <p>
+                  All our flowers are slow dried in a controlled environment to maintain the plant’s natural CBD and terpene quality. High grade, low temp, closed-loop alcohol extraction is used for hemp flower oil processing. We leave a small amount of beneficial organic material in our oils to create a full “entourage effect” of the hemp flower for maximum medicinal quality.   
+                </p>
               </div>
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">Where is Harvey’s All Natural’s grown and processed?</a>
+              <a href="#" class="accordion-title">What strains do you use?</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
-                <p>Panel 1. Lorem ipsum dolor</p>
-                <a href="#">Nowhere to Go</a>
+                <p>
+                  Our genetics are based from the "Cherry" and "Wife" hemp strains, which are among the highest quality terpene profile and full spectrum CBD production in the industry.
+                </p>
               </div>
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">Become a member of the Harvey’s Promise</a>
+              <a href="#" class="accordion-title">Full Spectrum vs. Broad Spectrum vs. Isolates</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
-                <p>Panel 1. Lorem ipsum dolor</p>
-                <a href="#">Nowhere to Go</a>
+                <p>
+                  Full Spectrum: These oils are of the highest quality and ideally leave the oils in the natural state provided by the plant or the “entourage effect.” These oils should contain the full cannabidiol profile (CBDA, CBC, CBG, CBN, etc.) and should also contain the natural terpenes, the small amount of THC in the hemp plant, some chlorophyll, and other beneficial organic material from the plant. Our hemp oil contains about 70% of the CBD profiles and the remaining contents are the other beneficial elements.  
+                </p>
+
+                <p>
+                  Broad Spectrum: This is a new term that seems to relate to oil that undergoes extra processing to eliminate the THC and other elements. We have found that terpenes and CBDA get degraded through the excess processing.
+                </p>
+                  
+                <p>
+                  Isolates: Highly processed oil that degrades the full spectrum cannabidiol profile to create an oil or powder 96+% fully decarboxylated CBD. This is usually done to large scale industrial hemp with undesirable terpenes.
+                </p>
+                  
+                <p>
+                  So what does all this mean? Full spectrum oils will vary in quality from one harvest to the next, though ours will always fluctuate at the high end of the quality scale. Isolates will be more consistent, but much further down on the quality scale, and broad spectrum falls somewhere in between.
+                </p>
+
+              </div>
+            </li>
+
+            <li class="accordion-item" data-accordion-item>
+              <!-- Accordion tab title -->
+              <a href="#" class="accordion-title">What is the entourage effect?</a>
+          
+              <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
+              <div class="accordion-content" data-tab-content>
+                <p>
+                  This refers to using all that the natural plant has to offer. It has been found that CBD by itself is relatively weak. By maintaining the natural terpenoids and secondary cannabinoids in the hemp flower oil (full spectrum CBD oil), a much higher quality and long-term medicinal effect is created. 
+                </p>
+              </div>
+            </li>
+
+            <li class="accordion-item" data-accordion-item>
+              <!-- Accordion tab title -->
+              <a href="#" class="accordion-title">Hemp Flower Oil vs. Hemp Seed Oil</a>
+          
+              <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
+              <div class="accordion-content" data-tab-content>
+                <p>
+                  Hemp flower oil or “CBD oil” is extracted from the hemp flower. This is the oil we grow and use in all our products. Hemp seed oil is pressed from the hemp seed. It is high in complex B vitamins, but does not contain CBD. Hemp flower oil costs about 500x more than hemp seed oil. Don’t be fooled by companies claiming hemp seed oil as part or all of the volume of CBD oil or “hemp extract” in their products. 
+                </p>
+              </div>
+            </li>
+
+            <li class="accordion-item" data-accordion-item>
+              <!-- Accordion tab title -->
+              <a href="#" class="accordion-title">Why don't you use isolates?</a>
+          
+              <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
+              <div class="accordion-content" data-tab-content>
+                <p>
+                  Many companies use CBD isolates in their products, which strip many of the beneficial compounds and elements, to make oils of nearly 100% or “pure CBD.” This much inferior product is mainly made so hemp oil wholesalers can provide companies, who do not farm their own hemp, a consistent oil - no matter where or how it is grown and processed. Research has found that when using CBD for long-term medicinal reasons, a full spectrum oil, with natural terpenes of the hemp plant, performs exponentially greater than a CBD isolate and the body can build up a resistance to isolates within a short time. To support long-term healing benefits, we only use the highest quality full spectrum CBD oils in all our products. We never use isolates.
+                </p>
               </div>
             </li>
           </ul>
