--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -18,7 +18,7 @@
         <div class="cell small-12">
           <h3>Disclaimer</h3>
           <p>
-            A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended dosage to your coffee, smoothie or drop directly underneath the tongue in the morning or day.
+            These statements on this website have not been evaluated by the FDA and are not intended to diagnose, treat or cure any disease. Always check with your physician before starting a new dietary supplement program. HarveysAllNaturals.com does not sell or distribute any products that are in violation of the United States Controlled Substances Act (US.CSA) Harvey’s All Naturals, LLC grows, sells, and distributes hemp based products. 
           </p>
         </div>
       </div>
