--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,7 +5,7 @@
       <div class="medium-12 cell">
         <img class="hero_logo" src="/assets/img/logo.svg" />
 
-        <p> Harvey’s All Naturals provides premium farm-to-table full spectrum CBD products, derived from only the best quality hemp flower oil.</p>
+        <p>Harvey’s All Naturals provides premium farm-to-table full spectrum CBD products, derived from only the best quality hemp flower oil.</p>
       </div>
     </div>
 
@@ -13,7 +13,7 @@
       <div class="medium-12 cell">
         <nav>
           <div class="nav_item">
-            <a href="#">The Harveys Difference</a>
+            <a href="#">The Harvey's Difference</a>
           </div>
           <div class="nav_item">
             <a href="#">Our Products</a>
@@ -41,7 +41,7 @@
       <div class="info_card animated delay-1s">
         <div class="info_card-wrapper">
           <img class="info_card-header" src="/assets/img/leadville_heading.svg" />
-          <p class="info_card-description">Settled 1859 / Population 2759</p>
+          <p class="info_card-description">Settled 1858 / Population 2759</p>
           <p>Once one of the most lawless towns in the West, Leadville is now the home of Harvey’s All Naturals.</p>
         </div>
       </div>
