--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -16,8 +16,14 @@
         <img src="/assets/img/elixer-product-shot-1.jpg"/>
         <div class="product_item-content">
           <h3>Harvey's CBD Elixer</h3>
-          <span class="product_sizing">500mg / 0.5 oz</span>
-          <p class="product_description" data-equalizer-watch>A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended dosage to your coffee, smoothie or drop directly underneath the tongue in the morning or day.</p>
+          <span class="product_sizing">500mg CBD Oil / 0.5 oz</span>
+          <p class="product_description" data-equalizer-watch>
+              Our elixir is a concentrated full spectrum hemp flower oil infused with grape seed oil to improve bioavailability. Cold processing maintains the natural terpenes and secondary cannabidiols to create a high-quality product. Just a few drops per day can have amazing results. 
+          </p>
+
+          <p class="product_description" data-equalizer-watch>
+              Best for alleviating stress and anxiety, treating depression, insomnia, and even hangovers.
+          </p>
           <div class="product_meta">
             <span class="product_price">$29.99</span>
             <a href="#" data-toggle="reveal-product" class="button">Purchase <i class="arrow"></i></a>
@@ -29,8 +35,15 @@
         <img src="/assets/img/salve-product-shot-1.jpg"/>
         <div class="product_item-content">
           <h3>Harvey's CBD Healing Salve</h3>
-          <span class="product_sizing">500mg / 1.0 oz</span>
-          <p class="product_description" data-equalizer-watch></p>A full-spectrum, hemp derived CBD oil formulated to naturally sooth the mind and body from various daily stressors. This means when taken we can shine, supported by the non-psychoactive, stabilizing benefits of balanced daily wellbeing. For best results add our recommended.</p>
+          <span class="product_sizing">500mg CDB Oil / 1.0 oz</span>
+          <p class="product_description" data-equalizer-watch>
+              For fast improvement to areas of pain and discomfort, just apply and let our high quality, full spectrum hemp flower oil do its thing. Our recipe is simple, using all-natural ingredients the way Mother Nature intends.          
+          </p>
+
+          <p class="product_description" data-equalizer-watch>
+              Best for fighting inflammation and treating arthritis, joint pain, rheumatism, muscle tension, and so much more!
+          </p>          
+          
           <div class="product_meta">
             <span class="product_price">$29.99</span>
             <a href="#" data-toggle="reveal-product" class="button">Purchase <i class="arrow"></i></a>
@@ -49,8 +62,8 @@
       <div class="info_card animated delay-1s">
         <div class="info_card-wrapper">
           <img class="info_card-header" src="/assets/img/harvey_headline.svg" />
-          <p class="info_card-description">Yes! Harvey is a REAL person!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+          <p class="info_card-description">Yes! Harvey is a real person.</p>
+          <p>He created Harvey’s All Naturals in 2015, guiding other small farms in responsible hemp production and educating the community on the benefits of the plant. When not on the farm, Harvey enjoy spending time in the mountains with his family, playing his mandolin, and making people happy.</p>
           <img class="info_thumb" src="/assets/img/harvey.png" />
         </div>
       </div>
