--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,7 +5,7 @@
         <img class="about_sun-icon" src="/assets/img/sun-icon.svg" />
 
         <h2>
-          Harvey grows his own hemp on an off-grid farm which is 100% solar powered and uses water from an artisanal well in the San Luis Valley to carefully cultivate each hemp plant.
+          We grow our hemp on a 100% solar-powered, off-grid farm in Colorado and use water from an artisanal well in the San Luis Valley to carefully cultivate each hemp plant.
         </h2>
       </div>
     </div>
