Text changes and making links active in navs

--- a/src/partials/faqs.html
+++ b/src/partials/faqs.html
@@ -1,4 +1,4 @@
-<section class="faqs">
+<section id="faqs" class="faqs">
     <div class="grid-container">
       <span class="bg-tree"></span>
       <span class="bg-tree" data-rellax-speed="-.75"></span>
