--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,10 +3,10 @@
     <div class="grid-container">
       <div class="grid-x footer_grid">
         <div class="cell small-12 medium-9 footer_menu align-left">
-          <a class="nav_link menu-item" href="#">The Harveys Difference</a>
-          <a class="nav_link menu-item" href="#">Our Products</a>
-          <a class="nav_link menu-item" href="#">CBD FAQs</a>
-          <a class="nav_link menu-item" href="#">Talk To Us</a>
+          <a class="nav_link menu-item" href="#about">The Harvey's Difference</a>
+          <a class="nav_link menu-item" href="#products">Our Products</a>
+          <a class="nav_link menu-item" href="#faqs">CBD FAQs</a>
+          <a class="nav_link menu-item" href="#contact">Talk To Us</a>
         </div>
         
         <div class="cell small-12 medium-3 footer_logo">
