--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,16 +13,16 @@
       <div class="medium-12 cell">
         <nav>
           <div class="nav_item">
-            <a href="#">The Harvey's Difference</a>
+            <a class="nav_link" href="#about">The Harvey's Difference</a>
           </div>
           <div class="nav_item">
-            <a href="#">Our Products</a>
+            <a class="nav_link" href="#products">Our Products</a>
           </div>
           <div class="nav_item">
-            <a href="#">CBD FAQs</a>
+            <a class="nav_link" href="#faqs">CBD FAQs</a>
           </div>
           <div class="nav_item">
-            <a href="#">Talk To Us</a>
+            <a class="nav_link" href="#contact">Talk To Us</a>
           </div>
         </nav>
       </div>
