--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section id="products" class="products">
   <div class="grid-container">
     <span class="bg-tree"></span>
     <span class="bg-tree" data-rellax-speed=".5"></span>
@@ -8,7 +8,7 @@
           Harvey's CBD Products
         </h2>
         <p>
-            We use only the purest help flower oil to create our full spectrum, premium CBD products.
+            We use only the purest hemp flower oil to create our full spectrum, premium CBD products.
         </p>
       </div>
 
@@ -35,7 +35,7 @@
         <img src="/assets/img/salve-product-shot-1.jpg"/>
         <div class="product_item-content">
           <h3>Harvey's CBD Healing Salve</h3>
-          <span class="product_sizing">500mg CDB Oil / 1.0 oz</span>
+          <span class="product_sizing">500mg CDB Oil / 1 oz</span>
           <p class="product_description" data-equalizer-watch>
               For fast improvement to areas of pain and discomfort, just apply and let our high quality, full spectrum hemp flower oil do its thing. Our recipe is simple, using all-natural ingredients the way Mother Nature intends.          
           </p>
@@ -63,7 +63,9 @@
         <div class="info_card-wrapper">
           <img class="info_card-header" src="/assets/img/harvey_headline.svg" />
           <p class="info_card-description">Yes! Harvey is a real person.</p>
-          <p>He created Harvey’s All Naturals in 2015, guiding other small farms in responsible hemp production and educating the community on the benefits of the plant. When not on the farm, Harvey enjoy spending time in the mountains with his family, playing his mandolin, and making people happy.</p>
+          <p>
+            He created Harvey’s All Naturals in 2015, educating the community and other small farmers on the benefits of hemp and responsible farming practices. When he’s not growing the world’s greatest hemp, Harvey enjoys spending family time in the mountains, playing his mandolin, and making people happy.
+          </p>
           <img class="info_thumb" src="/assets/img/harvey.png" />
         </div>
       </div>
