--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section id="about" class="about">
   <div class="grid-container">
     <div class="grid-x">
       <div class="medium-12 large-10 large-offset-1 cell">
