--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -8,7 +8,8 @@
         <h2>Talk To Harvey</h2>
         <p>Questions about Harvey’s All Naturals? Want to get Harvey’s at your local store?</p>
         <form data-abide novalidate action="https://formsubmit.co/ryan@peaktwo.com" method="post" name="contact" data-netlify="false" class="contact_form">
-          <input type="hidden" name="$to" value="ryan@peaktwo.com">
+          <input type="hidden" name="$to" value="bridgette@peaktwo.com">
+          <input type="hidden" name="$cc" value="ryan@peaktwo.com">
           <input type="hidden" name="_next" value="https://harveys.netlify.com">
           <div data-abide-error class="alert callout" style="display: none;">
             <p><i class="fi-alert"></i> There are some errors in your form.</p>
@@ -17,7 +18,7 @@
             <div class="grid-x grid-margin-x">
               <div class="cell small-12">
                 <label>
-                  <input type="text" name="email" placeholder="yourname@yahoo.com" aria-errormessage="example1Error1" required pattern="email">
+                  <input type="text" name="email" placeholder="Email Address" aria-errormessage="example1Error1" required pattern="email">
                   <span class="form-error" id="example1Error1">
                     Please enter a valid email address.
                   </span>
