Adding new form recipient

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -7,9 +7,9 @@
       <div class="cell medium-10 medium-offset-1 contact_form-container">
         <h2>Talk To Harvey</h2>
         <p>Questions about Harvey’s All Naturals? Want to get Harvey’s at your local store?</p>
-        <form data-abide novalidate action="https://formsubmit.co/ryan@peaktwo.com" method="post" name="contact" data-netlify="false" class="contact_form">
-          <input type="hidden" name="$to" value="bridgette@peaktwo.com">
-          <input type="hidden" name="$cc" value="ryan@peaktwo.com">
+        <form data-abide novalidate action="https://formsubmit.co/bridgette@peaktwo.com" method="post" name="contact" data-netlify="false" class="contact_form">
+          <!-- <input type="hidden" name="$to" value="bridgette@peaktwo.com">
+          <input type="hidden" name="$cc" value="ryan@peaktwo.com"> -->
           <input type="hidden" name="_next" value="https://harveys.netlify.com">
           <div data-abide-error class="alert callout" style="display: none;">
             <p><i class="fi-alert"></i> There are some errors in your form.</p>
