Mobile and copy changes

--- a/src/assets/scss/partials/_about.scss
+++ b/src/assets/scss/partials/_about.scss
@@ -6,6 +6,7 @@
   background-size: cover;
   background-image: url('/assets/img/field_image.jpg');
   background-repeat: no-repeat;
+  background-position: center center;
 
   text-align: center;
   
