--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -28,7 +28,7 @@
     <div class="grid-container">
       <div class="grid-x">
         <div class="cell large-12">
-          <p>© 2019 Harvey’s All Naturals | Privacy Policy</p>
+          <p>© 2019 Harvey’s All Naturals</p>
         </div>
       </div>    
     </div>
