--- a/src/assets/scss/partials/_faqs.scss
+++ b/src/assets/scss/partials/_faqs.scss
@@ -18,6 +18,7 @@
 
   .grid-container {
     position: relative;
+    z-index: 2;
   }
 
   .bg-tree {
@@ -35,5 +36,12 @@
   .faqs_header {
     margin-bottom: 60px;
     text-align: center;
+    position: relative;
+    z-index: 2;
+  }
+
+  .faqs_content {
+    position: relative;
+    z-index: 50;
   }
 }
