--- a/src/assets/scss/partials/_footer.scss
+++ b/src/assets/scss/partials/_footer.scss
@@ -20,19 +20,20 @@
 
   .footer_logo {
     margin-bottom: 32px;
-    width: 132px;
-    text-align: right;
+    text-align: center;
     img {
-      width: 182px;
+      width: 132px;
     }
 
     @include breakpoint(medium) {
       margin-bottom: 0px;
+      text-align: right;
     }
   }
 
   .footer_menu {
     margin-bottom: 32px;
+    text-align: center;
 
     .menu-item {
       display: block;
