--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -7,7 +7,7 @@
       <div class="cell medium-10 medium-offset-1 contact_form-container">
         <h2>Talk To Harvey</h2>
         <p>Questions about Harvey’s All Naturals? Want to get Harvey’s at your local store?</p>
-        <form data-abide novalidate action="https://formsubmit.co/bridgette@peaktwo.com" method="post" name="contact" data-netlify="false" class="contact_form">
+        <form data-abide novalidate action="https://formsubmit.co/orders@harveysallnaturals.com" method="post" name="contact" data-netlify="false" class="contact_form">
           <!-- <input type="hidden" name="$to" value="bridgette@peaktwo.com">
           <input type="hidden" name="$cc" value="ryan@peaktwo.com"> -->
           <input type="hidden" name="_next" value="https://harveys.netlify.com">
