--- a/src/partials/faqs.html
+++ b/src/partials/faqs.html
@@ -11,7 +11,7 @@
           </h2>
         </div>
 
-        <div class="medium-12 large-8 large-offset-2 cell">  
+        <div class="medium-12 large-8 large-offset-2 cell faqs_content">  
           <ul class="accordion" data-accordion data-allow-all-closed="true">
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
@@ -60,7 +60,7 @@
             </li>
             <li class="accordion-item" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">How is Harvey's All Naturals processed</a>
+              <a href="#" class="accordion-title">How is Harvey's All Naturals processed?</a>
           
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
