--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -12,13 +12,13 @@
         </p>
       </div>
 
-      <div class="medium-5 cell product_item" data-equalizer-watch>
+      <div class="medium-6 large-5 cell product_item" data-equalizer-watch>
         <img src="/assets/img/elixer-product-shot-1.jpg"/>
         <div class="product_item-content">
           <h3>Harvey's CBD Elixer</h3>
           <span class="product_sizing">500mg CBD Oil / 0.5 oz</span>
           <p class="product_description" data-equalizer-watch>
-              Our elixir is a concentrated full spectrum hemp flower oil infused with grape seed oil to improve bioavailability. Cold processing maintains the natural terpenes and secondary cannabidiols to create a high-quality product. Just a few drops per day can have amazing results. 
+              Our elixir is a concentrated full spectrum hemp flower oil infused with grape seed oil to improve bioavailability. Cold processing maintains the natural terpenes and secondary cannabiniods to create a high-quality product. Just a few drops per day can have amazing results. 
           </p>
 
           <p class="product_description" data-equalizer-watch>
@@ -31,7 +31,7 @@
         </div>
       </div>
 
-      <div class="medium-5 medium-offset-2 cell product_item" data-equalizer-watch>
+      <div class="medium-6 large-5 largeoffset-2 cell product_item" data-equalizer-watch>
         <img src="/assets/img/salve-product-shot-1.jpg"/>
         <div class="product_item-content">
           <h3>Harvey's CBD Healing Salve</h3>
@@ -64,7 +64,7 @@
           <img class="info_card-header" src="/assets/img/harvey_headline.svg" />
           <p class="info_card-description">Yes! Harvey is a real person.</p>
           <p>
-            He created Harvey’s All Naturals in 2015, educating the community and other small farmers on the benefits of hemp and responsible farming practices. When he’s not growing the world’s greatest hemp, Harvey enjoys spending family time in the mountains, playing his mandolin, and making people happy.
+            When he’s not growing the world’s greatest hemp, Harvey enjoys spending family time in the mountains, playing his mandolin, and making people happy.
           </p>
           <img class="info_thumb" src="/assets/img/harvey.png" />
         </div>
@@ -83,11 +83,11 @@
           <p>We’ll be selling Harvey’s products online soon, but until then, here’s how to get your hands on the goods.</p>
 
           <div class="contact_info grid-x">
-            <div class="cell medium-7">
+            <div class="cell large-7 contact_block">
               <img src="/assets/img/icon-email.svg" class="icon"/>
               <a href="mailto:harveysallnaturalscontact@gmail.com" target="_blank">harveysallnaturalscontact@gmail.com</a>
             </div>
-            <div class="cell medium-5">
+            <div class="cell large-5 contact_block">
               <img src="/assets/img/icon-phone.svg" class="icon"/>
               <a href="tel:+9703764689 " target="_blank">970-376-4689 </a>
             </div>
