--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -25,13 +25,13 @@
               Best for alleviating stress and anxiety, treating depression, insomnia, and even hangovers.
           </p>
           <div class="product_meta">
-            <span class="product_price">$29.99</span>
+            <span class="product_price">$60.00</span>
             <a href="#" data-toggle="reveal-product" class="button">Purchase <i class="arrow"></i></a>
           </div>
         </div>
       </div>
 
-      <div class="medium-6 large-5 largeoffset-2 cell product_item" data-equalizer-watch>
+      <div class="medium-6 large-5 large-offset-2 cell product_item" data-equalizer-watch>
         <img src="/assets/img/salve-product-shot-1.jpg"/>
         <div class="product_item-content">
           <h3>Harvey's CBD Healing Salve</h3>
@@ -45,7 +45,7 @@
           </p>          
           
           <div class="product_meta">
-            <span class="product_price">$29.99</span>
+            <span class="product_price">$60.00</span>
             <a href="#" data-toggle="reveal-product" class="button">Purchase <i class="arrow"></i></a>
           </div>
         </div>
@@ -85,11 +85,11 @@
           <div class="contact_info grid-x">
             <div class="cell large-7 contact_block">
               <img src="/assets/img/icon-email.svg" class="icon"/>
-              <a href="mailto:harveysallnaturalscontact@gmail.com" target="_blank">harveysallnaturalscontact@gmail.com</a>
+              <a href="mailto:orders@harveysallnaturals.com" target="_blank">orders@harveysallnaturals.com</a>
             </div>
             <div class="cell large-5 contact_block">
               <img src="/assets/img/icon-phone.svg" class="icon"/>
-              <a href="tel:+9703764689 " target="_blank">970-376-4689 </a>
+              <a href="tel:+9703764689 " target="_blank">970-376-4689</a>
             </div>
 
           </div>
