--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -9,8 +9,19 @@
     <title>Harveys All Naturals</title>
     <link rel="stylesheet" href="https://use.typekit.net/vuf5pxm.css">
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-T8TW5VV');</script>
+    <!-- End Google Tag Manager -->
   </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T8TW5VV"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
 <!-- {{> header}} -->
