--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -10,7 +10,7 @@
         <form data-abide novalidate action="https://formsubmit.co/orders@harveysallnaturals.com" method="post" name="contact" data-netlify="false" class="contact_form">
           <!-- <input type="hidden" name="$to" value="bridgette@peaktwo.com">
           <input type="hidden" name="$cc" value="ryan@peaktwo.com"> -->
-          <input type="hidden" name="_next" value="https://harveys.netlify.com">
+          <input type="hidden" name="_next" value="https://harveys.netlify.com/?complete=true">
           <div data-abide-error class="alert callout" style="display: none;">
             <p><i class="fi-alert"></i> There are some errors in your form.</p>
           </div>
